# fastapi-todos-fiber

./: .env.example  .env.mcp.example  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: copilot-instructions.md
adminer/: Dockerfile  adminer.css
alembic/: env.py
alembic/alembic/: env.py
alembic/alembic/versions/: 0de534d84701_create_todo_table.py
alembic/versions/: 0beb170a29f9_init_migration.py  14d230eb9350_new_delete_todo_endpoint.py  34c74bb10d3e_initial_migration.py  77d4b3d2f220_include_seed_data_endpoint.py  e43628736a78_new_post_update_todo_endpoint.py
app/: alembic.ini  db.py  main.py  seed.py  settings.py  test_db_connection.py  utils.py
app/alembic/versions/: 3fd8ca1ef3d3_create_todo_table.py
app/internal/: admin.py
app/models/: Todos.py
app/routers/: todos.py
app/schemas/: Todos.py
backend/: db.py  main.py  settings.py
backend/models/: Todos.py
backend/routers/: Todos.py
docs/: origin-docs.txt
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.css  App.jsx  App.test.jsx  App.test.ts  App.tsx  constants.js  global.d.ts  hooks.js  index.css  utils.js  utils.ts
frontend/src/components/: Todo.jsx  TodoComponent.tsx  TodoList.css  TodoList.jsx  types.ts
frontend/src/components/DeleteButtonComponent/: index.css  index.tsx
frontend/src/components/TodoComponent/: TodoComponent.tsx  index.css
frontend/src/components/TodoList/: TodoList.jsx  index.jsx
(+2 files in other folders)
