[project]
name = "dopestack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "sqlalchemy[asyncio]>=2.0.41",
]
